# quantreg-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: FindOpenBLAS.cmake  utils.cmake
data/: engel.csv
include/: quantreg-cpp
packaging/: CMakeLists.txt  quantreg-cpp-config.cmake
src/: quantreg-cpp.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  quantreg-cpp-sample.cpp
